beginnings of scheduler

--- a/alarms/alarms.html
+++ b/alarms/alarms.html
@@ -4,82 +4,17 @@
         <div class="panel-heading">
             Alarms
         </div>
-        <div class="panel-body">
-            <button class="btn btn-primary">Known</button>
-            <button class="btn btn-primary">Acknowledge</button>
-            <button class="btn btn-primary">Clear</button>
-            <button class="btn btn-primary">Something</button>
-            <button class="btn btn-primary">Another thing</button>
+        <div class="">
+            <button class="btn btn-default">Known</button>
+            <button class="btn btn-default">Acknowledge</button>
+            <button class="btn btn-default">Clear</button>
+            <button class="btn btn-default">Something</button>
+            <button class="btn btn-default">Another thing</button>
         </div>
 
-        <table class="table" width="100%">
-            <col style="width: 30px;">
-            <col style="width: 200px;">
-            <col style="width: 100px;">
-            <col style="width: 100px;">
-            <col style="width: 200px;">
-            <col style="width: auto;">
-            <thead>
-            <tr>
-                <th><input type="checkbox" ng-model="selectAll"></th>
-                <th>
-                    <a href="" ng-click="orderByField='date'; reverseSort = !reverseSort">Date
-                    <span ng-show="orderByField === 'date'">
-                        <span ng-show="!reverseSort">^</span>
-                        <span ng-show="reverseSort">v</span>
-                    </span>
-                    </a>
-                </th>
-                <th>
-                    <a href="" ng-click="orderByField='severity'; reverseSort = !reverseSort">Severity
-                    <span ng-show="orderByField === 'severity'">
-                        <span ng-show="!reverseSort">^</span>
-                        <span ng-show="reverseSort">v</span>
-                    </span>
-                    </a>
-                </th>
+        <div class="alarmsGridStyle" ng-grid="gridOptionsAlarms"></div>
 
-                <th>
-                    <a href="" ng-click="orderByField='priority'; reverseSort = !reverseSort">Priority
-                    <span ng-show="orderByField === 'priority'">
-                        <span ng-show="!reverseSort">^</span>
-                        <span ng-show="reverseSort">v</span>
-                    </span>
-                    </a>
-                </th>
-
-                <th>
-                    <a href="" ng-click="orderByField='name'; reverseSort = !reverseSort">Alarm Name
-                    <span ng-show="orderByField === 'name'">
-                        <span ng-show="!reverseSort">^</span>
-                        <span ng-show="reverseSort">v</span>
-                    </span>
-                    </a>
-                </th>
-
-                <th>
-                    <a href="" ng-click="orderByField='message'; reverseSort = !reverseSort">Message
-                    <span ng-show="orderByField === 'message'">
-                        <span ng-show="!reverseSort">^</span>
-                        <span ng-show="reverseSort">v</span>
-                    </span>
-                    </a>
-                </th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr ng-repeat="alarm in alarmsData | orderBy:orderByField:reverseSort">
-                <td><input type="checkbox" ng-model="alarm.selected"></td>
-                <td>{{alarm.date}}</td>
-                <td>{{alarm.severity}}</td>
-                <td>{{alarm.priority}}</td>
-                <td>{{alarm.name}}</td>
-                <td>{{alarm.message}}</td>
-            </tr>
-            </tbody>
-        </table>
-
-        <div ng-if="alarmsData.length === 0"><h3><i>No alarms found!</i></h3></div>
+        <div ng-if="alarmsData.length === 0"><h3 style="width: 100%; text-align: center;">Could not retrieve alarms</h3></div>
 
     </div>
 
