--- a/widgets/navigation/navigation-widget.html
+++ b/widgets/navigation/navigation-widget.html
@@ -1,26 +1,29 @@
-<button class="btn btn-primary" ng-click="stateGo('operatorControl')">Operator Control</button>
-<button class="btn btn-primary" ng-click="stateGo('alarms')">Alarms</button>
-<button class="btn btn-primary">Health and State</button>
+<div class="navigationButtonGroup">
+
+    <button class="btn btn-primary" ng-click="stateGo('operatorControl')">Operator Control</button>
+    <button class="btn btn-primary" ng-click="stateGo('alarms')">Alarms</button>
+    <button class="btn btn-primary" disabled>Health and State</button>
 
 
-<button class="btn btn-primary">Schedules</button>
-<button class="btn btn-primary">Weather</button>
-<button class="btn btn-primary" ng-click="stateGo('sensorGraph')">Sensor Graphs</button>
+    <button class="btn btn-primary" ng-click="stateGo('scheduler')">Scheduler</button>
+    <button class="btn btn-primary" disabled>Weather</button>
+    <button class="btn btn-primary" ng-click="stateGo('sensorGraph')">Sensor Graphs</button>
 
-<button class="btn btn-primary" ng-click="stateGo('admin')">Admin</button>
-<button class="btn btn-primary">Log Reports</button>
-<button class="btn btn-primary">Source Catalogues</button>
-
-
-<button class="btn btn-primary"></button>
-<button class="btn btn-primary"></button>
-<button class="btn btn-primary"></button>
+    <button class="btn btn-primary" ng-click="stateGo('admin')">Admin</button>
+    <button class="btn btn-primary" disabled>Log Reports</button>
+    <button class="btn btn-primary" disabled>Source Catalogues</button>
 
 
-<button class="btn btn-primary"></button>
-<button class="btn btn-primary"></button>
-<button class="btn btn-primary"></button>
+    <!--<button class="btn btn-primary"></button>-->
+    <!--<button class="btn btn-primary"></button>-->
+    <!--<button class="btn btn-primary"></button>-->
 
-<button class="btn btn-primary"></button>
-<button class="btn btn-primary"></button>
-<button class="btn btn-primary"></button>
+
+    <!--<button class="btn btn-primary"></button>-->
+    <!--<button class="btn btn-primary"></button>-->
+    <!--<button class="btn btn-primary"></button>-->
+
+    <!--<button class="btn btn-primary"></button>-->
+    <!--<button class="btn btn-primary"></button>-->
+    <!--<button class="btn btn-primary"></button>-->
+</div>
