refined scheduler control

--- a/about/about.html
+++ b/about/about.html
@@ -1,4 +1,4 @@
-<div class="col-md-12" ng-controller="AboutCtrl">
+<div class="view-container" ng-controller="AboutCtrl">
     <h1>{{title}}</h1>
     <hr/>
     <p ng-if="uiVersion">Current UI version: {{uiVersion}}</p>
