--- a/alarms/alarms.html
+++ b/alarms/alarms.html
@@ -1,4 +1,4 @@
-<div ng-controller="AlarmsCtrl">
+<div class="view-container" ng-controller="AlarmsCtrl">
 
     <div class="panel panel-default">
         <div class="panel-heading">
