--- a/landing/landing.html
+++ b/landing/landing.html
@@ -1,4 +1,4 @@
-<div ng-controller="LandingCtrl">
+<div class="view-container" ng-controller="LandingCtrl">
 
     <adf-dashboard name="{{name}}" adf-model="dashboardModel"></adf-dashboard>
 
