--- a/operator-control/operator-control.html
+++ b/operator-control/operator-control.html
@@ -1,4 +1,4 @@
-<div ng-controller="OperatorControlCtrl">
+<div class="view-container" ng-controller="OperatorControlCtrl">
 
     <div class="panel panel-default">
         <div class="panel-heading">
