--- a/sensor-graph/sensor-graph.html
+++ b/sensor-graph/sensor-graph.html
@@ -1,4 +1,4 @@
-<div class="col-md-12" ng-controller="SensorGraphCtrl">
+<div class="view-container" ng-controller="SensorGraphCtrl">
     <!--<d3-bars data="d3Data"></d3-bars>-->
 
     <d3-line data="d3LineData" datasize="d3LineDataSize"></d3-line>
