--- a/widgets/navigation/navigation-widget.html
+++ b/widgets/navigation/navigation-widget.html
@@ -6,7 +6,7 @@
 
 
     <button class="btn btn-primary" ng-click="stateGo('scheduler')">Scheduler</button>
-    <button class="btn btn-primary" disabled>Weather</button>
+    <button class="btn btn-primary" ng-click="stateGo('weather')">Weather</button>
     <button class="btn btn-primary" ng-click="stateGo('sensorGraph')">Sensor Graphs</button>
 
     <button class="btn btn-primary" ng-click="stateGo('admin')">Admin</button>
