--- a/admin/admin.html
+++ b/admin/admin.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default" ng-controller="AdminCtrl">
+<div class="view-container panel panel-default" ng-controller="AdminCtrl">
 
     <div class="panel-heading">
         A heading for our panel
