--- a/weather/weather.html
+++ b/weather/weather.html
@@ -1,4 +1,4 @@
-<div class="col-md-12" ng-controller="WeatherCtrl">
-
+<div class="view-container" ng-controller="WeatherCtrl">
+Weather happens.
 
 </div>
