styling changes to be more minimalistic

--- a/alarms/alarms.html
+++ b/alarms/alarms.html
@@ -5,11 +5,11 @@
             Alarms
         </div>
         <div class="">
-            <button class="btn btn-default">Known</button>
-            <button class="btn btn-default">Acknowledge</button>
-            <button class="btn btn-default">Clear</button>
-            <button class="btn btn-default">Something</button>
-            <button class="btn btn-default">Another thing</button>
+            <button class="btn btn-primary">Known</button>
+            <button class="btn btn-primary">Acknowledge</button>
+            <button class="btn btn-primary">Clear</button>
+            <button class="btn btn-primary">Something</button>
+            <button class="btn btn-primary">Another thing</button>
         </div>
 
         <div class="alarmsGridStyle" ng-grid="gridOptionsAlarms"></div>
