--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
 
         <div class="nav navbar-nav btn-group" style="margin-left: 20px;">
 
-            <button type="button" class="btn btn-default navbar-btn" ng-click="stateGo('operatorControl')">Operator
+            <button type="button" class="btn btn-navbar-fill" ng-click="stateGo('operatorControl')">Operator
                 Control
             </button>
-            <button type="button" class="btn btn-default dropdown-toggle navbar-btn" data-toggle="dropdown">
+            <button type="button" class="btn btn-navbar-fill dropdown-toggle" data-toggle="dropdown">
                 <span class="caret"></span>
                 <span class="sr-only">Toggle Dropdown</span>
             </button>
@@ -156,7 +156,7 @@
 
                 <!--ng-show="!userLoggedIn"-->
                 <li >
-                    <button type="button" class="btn btn-default navbar-btn" ng-click="stateGo('login')">Login
+                    <button type="button" class="btn btn-navbar-fill" ng-click="stateGo('login')">Login
                     </button>
                 </li>
                 <!--<li ng-show="userLoggedIn">-->
