--- a/operator-control/operator-control.html
+++ b/operator-control/operator-control.html
@@ -5,11 +5,11 @@
             <h3 class="panel-title">{{title}}</h3>
         </div>
         <div class="panel-body panel-operator-controls" >
-            <button class="btn btn-primary btn-lg" ng-click="">Inhibit All</button>
-            <button class="btn btn-primary btn-lg" ng-click="">Stow All</button>
-            <button class="btn btn-primary btn-lg" ng-click="">Stop All</button>
-            <button class="btn btn-primary btn-lg" ng-click="">Resume Operations</button>
-            <button class="btn btn-primary btn-lg" ng-click="">Shutdown Computing</button>
+            <button class="btn btn-primary" ng-click="">Inhibit All</button>
+            <button class="btn btn-primary" ng-click="">Stow All</button>
+            <button class="btn btn-primary" ng-click="">Stop All</button>
+            <button class="btn btn-primary" ng-click="">Resume Operations</button>
+            <button class="btn btn-primary" ng-click="">Shutdown Computing</button>
         </div>
 
         <table class="table">
