--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
 <script src="widgets/navigation/navigation-widget.js"></script>
 <script src="widgets/dashboard-structures.js"></script>
 <script src="scheduler/scheduler.js"></script>
+<script src="util/gantt/gantt.js"></script>
 <!-- Add New Component JS Above -->
+
 <!--ng-show="userLoggedIn && !navbarCollapsed"-->
 <nav ng-show="!navbarCollapsed" class="navbar navbar-default" role="navigation">
 
@@ -113,7 +115,7 @@
             </ul>
         </div>
 
-        <div class="btn-group navbar-nav nav operator-control-btn-contrainer">
+        <div class="btn-group navbar-nav nav operator-control-btn-container">
 
             <button type="button" class="btn btn-navbar-fill" ng-click="stateGo('operatorControl')">Operator
                 Control
